2nd Commit. Simple website Online!

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -79,6 +79,7 @@ h6 {
 }
 </style>
 
+<link rel="stylesheet" href="style.css" type="text/css" />
 
 
 
@@ -278,15 +279,18 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Personal Website</a>
+      <a class="navbar-brand" href="index.html">Brian T Feng</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="index.html">About me</a>
 </li>
 <li>
-  <a href="about.html">About Me</a>
+  <a href="about.html">Experiences</a>
+</li>
+<li>
+  <a href="projects.html">Interesing Graphs from Projects</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -305,7 +309,24 @@ $(document).ready(function () {
 </div>
 
 
-<p>My experiences and aspirations.</p>
+<div id="name" class="section level4">
+<h4>Name:</h4>
+<p>Brian Feng <br/></p>
+</div>
+<div id="career-aspirations" class="section level4">
+<h4>Career Aspirations:</h4>
+<p>Aspired to employ statistical models and data insights to create a more sustainable future on Earth. <br/></p>
+</div>
+<div id="resume" class="section level4">
+<h4>Resume:</h4>
+<object data="resume.pdf" type="application/pdf" width="700px" height="700px">
+<embed src="resume.pdf">
+<p>
+This browser does not support PDFs. Please download the PDF to view it: <a href="resume.pdf">Download PDF</a>.
+</p>
+</embed>
+</object>
+</div>
 
 
 
