--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Welcome to Brian Feng’s Website</title>
+<title>Projects</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -304,16 +304,26 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Welcome to Brian Feng’s Website</h1>
+<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<p><span style="font-size:16px;&quot;">My name is <strong>Brian Feng</strong>, a Junior at <span style="color:orange">UT Austin</span>, and I am majoring in Computational Biology while pursuing certificates in Computer Science, Computational Sciences &amp; Engineering, and Environmental Sustainability. I am an aspiring Data Scientist that loves unearthing insights through data and statistical models.</span><br />
-<br/></p>
-<p><span style="font-size:16px;&quot;">I am currently a Data Science intern at The National Chiao Tung University and a Statistics Research Assistant at the National Tsing Hua University, two of the top 3 universities in Taiwan, allowing me to work on individual projects while acquiring substantial experiences with programming languages(Python and R), predicive statistical models, and machine learning algorithims. Fusing my passions for Data Analytics and Statistics/Math, I hope to work on more Machine Learning projects in the near future!</span></p>
-<p><br/> <span style="font-size:16px;&quot;"><em>Contact me <span class="citation">@brianfeng717</span><span class="citation">@utexas.edu</span></em></span><br />
-<br/> <img src="prof_pic.jpg" /></p>
+<p>Here are some captivating graphs I have made for my recent COVID-19 Research initiative with the National Chiao Tung University Team:</p>
+<div id="data-visualization-in-r" class="section level2">
+<h2><a href="curve.html">Data Visualization in R</a></h2>
+<ul>
+<li>An interactive graph displaying the COVID-19 State Cases/State Population curves in the United States.</li>
+<li>Provides insights on how different political and governmental policies affect the COVID-19 tresnds in the US</li>
+</ul>
+</div>
+<div id="interactive-us-map-in-r" class="section level2">
+<h2><a href="senate_map_graph.html">Interactive US Map in R</a></h2>
+<ul>
+<li>Interactive US Map to look at the Cases/Death percentages of each State</li>
+<li>Provides insights on the correlation between COVID-19 statistics and State political affiliation</li>
+</ul>
+</div>
 
 
 
