--- a/about.html
+++ b/about.html
@@ -319,13 +319,7 @@ $(document).ready(function () {
 </div>
 <div id="resume" class="section level4">
 <h4>Resume:</h4>
-<object data="resume.pdf" type="application/pdf" width="700px" height="700px">
-<embed src="resume.pdf">
-<p>
-This browser does not support PDFs. Please download the PDF to view it: <a href="resume.pdf">Download PDF</a>.
-</p>
-</embed>
-</object>
+<p><img src="resume.jpg" /></p>
 </div>
 
 
