Un-comitting 2-1 because pdfs work!

--- a/about.html
+++ b/about.html
@@ -319,7 +319,13 @@ $(document).ready(function () {
 </div>
 <div id="resume" class="section level4">
 <h4>Resume:</h4>
-<p><img src="resume.jpg" /></p>
+<object data="resume.pdf" type="application/pdf" width="700px" height="700px">
+&lt;embed src=&quot;resume.pdf&gt;
+<p>
+This browser does not support PDFs. Go to the github link at <a href="https://github.com/brianfeng717/personal_website/blob/master/resume.pdf" class="uri">https://github.com/brianfeng717/personal_website/blob/master/resume.pdf</a> or download the PDF to view it: <a href="resume.pdf">Download PDF</a>.
+</p>
+</embed>
+</object>
 </div>
 
 
